LIST OF CHANGES
---------------

 - add function to support GATK HaplotypeCaller
 - add function to concat and recompress gVCFs
 - add function to calculate BQSR table

release 56.1.0
 - move reference cache from seq_alignment to own singleton class
 - remove provisions for old-style run folders
 - qc_review function added
 - provisions for splitting a product into chunks
 - to be forward compatible with changes in tracking, remove direct
   dependency of the pipeline daemon on the short_info and location
   tracking roles
 - ability to run the pipeline for individual products; some archival
   pipeline functions updated to enbable this ability on their level
 - autoqc adapter check - give cram files as input

release 56.0.1
 - ensure that the paths serived from the archive directory in
   different parts run_is_deletable utility are consistent.
 - add autosome stats file to product release
 - add missing bait prune to seq_alignment

release 56.0.0
 - add autosome target to seq_alignment
 - pipeline configuration module and product release configuration
   accessors are moved to npg_tracking package in order for the product
   configuration be accessible from other packages, code in this
   package refactored to accommodate the change
 - conform to bambi's v 0.12.0 file and directory naming schema for
   tileviz data
 - add facility to do LSF 1:1 job index dependencies on array jobs
 - when validating run folder for deletion, ensure linked directories
   and files are recognised

release 55.2
 - switched from S3 to Google Compute Storage
 - change bcfstats qc job to use CRAM instead of BAM file as input

release 55.1
 - added configuration option to change the S3 endpoint URL

release 55.0.1
 - bug fix for invocation of the generate() function in the
   seq_alignment function module following an addition of the
   generate_composition function

release 55.0
 - additional 'GnT MDA' library type added to allowed types for gbs analysis